many changes - search working